SGTRR-460 Forgot password" Padding to the right and left uneven: Fixed

--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -2692,3 +2692,6 @@ input::-ms-clear {
 .navbar-default .navbar-toggle:focus {
     background-color: inherit;
 }
+.static {
+    position: static;
+}
